src/objects/Partner_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Relationships</relationshipLabel>
        <relationshipName>R00N70000001wkhEEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Relationships</relationshipLabel>
        <relationshipName>R00N70000001wkhTEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Relationship__c</fullName>
        <label>Partner Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Previous Client</fullName>
                </value>
                <value>
                    <fullName>Previous Customer</fullName>
                </value>
                <value>
                    <fullName>Previous Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Comments__c</fullName>
        <label>Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Partner Relationship</label>
    <nameField>
        <displayFormat>Partner {000000000}</displayFormat>
        <label>Partner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>